# ChangeLog for app-portage/splat
# Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-portage/splat/ChangeLog,v 1.25 2008/01/26 16:13:33 grobian Exp $

  26 Jan 2008; Fabian Groffen <grobian@gentoo.org> splat-0.08.ebuild:
  Dropped ppc-macos keyword, see you in prefix

  09 Feb 2007; Diego Pettenò <flameeyes@gentoo.org> ChangeLog:
  Regenerate digest in Manifest2 format.

  09 Feb 2007; Diego Pettenò <flameeyes@gentoo.org> ChangeLog:
  Regenerate digest in Manifest2 format.

  16 May 2006; Thomas Cort <tcort@gentoo.org> splat-0.08.ebuild:
  Stable on alpha.

  16 Apr 2006; Thomas Cort <tcort@gentoo.org> splat-0.08.ebuild:
  Added ~alpha keyword.

  20 Oct 2005; Paul Varner <fuzzyray@gentoo.org> files/digest-splat-0.07,
  files/digest-splat-0.08, Manifest:
  Fix digest to match upstream. (Bug 103067)

  07 Oct 2005; Simon Stelling <blubb@gentoo.org> splat-0.08.ebuild:
  stable on amd64

  27 Aug 2005; Guy Martin <gmsoft@gentoo.org> splat-0.08.ebuild:
  Stable on hppa.

  19 Aug 2005; Luis Medinas <metalgod@gentoo.org> splat-0.08.ebuild:
  Added ~amd64 keywords.

  18 Aug 2005; Michael Hanselmann <hansmi@gentoo.org> splat-0.08.ebuild:
  Stable on ppc.

  16 Aug 2005; Ian Leitch <port001@gentoo.org> splat-0.08.ebuild:
  Stable on x86

  03 Apr 2005; Hardave Riar <hardave@gentoo.org> splat-0.08.ebuild:
  Keyworded ~mips

  28 Dec 2004; Ciaran McCreesh <ciaranm@gentoo.org> :
  Change encoding to UTF-8 for GLEP 31 compliance

  30 Oct 2004; Joseph Jezak <josejx@gentoo.org> splat-0.07.ebuild,
  splat-0.08.ebuild:
  Keyworded stable ppc

  17 Jul 2004; Tom Gall <tgall@gentoo.org> splat-0.08.ebuild:
  stable on ppc64, bug #55518

  12 Jul 2004; Jason Wever <weeve@gentoo.org> splat-0.08.ebuild:
  Added the super spiffy ~sparc keyword.

*splat-0.08 (30 Jun 2004)

  30 Jun 2004; Ian Leitch <port001@gentoo.org> +splat-0.08.ebuild:
  Version bump

  05 May 2004; Bryan Østergaard <kloeri@gentoo.org> splat-0.07.ebuild: