@@ -1,5 +1,5 @@
 AUX splat-0.08-prefix.patch 853 RMD160 80268b368015a89a97a3b9137820b375f86aaff7 SHA1 143b3c132fb3f0aace0ccc24bff6a63ef6613d3d SHA256 6d2f4defc1ae000da7e85c7cd086958391d198355331af0640dc50da4381cbda
 DIST splat-0.08.tar.bz2 12180 RMD160 05e2e48826551dc41ad0f5a2f3f5a2d1fc34b2e5 SHA1 97e36a0a3a23353219a19c7526b89a51e8443db6 SHA256 cdadf79909308d830d68e9b2583f91f081291ee9db2dbadd05c291b6566241e3
-EBUILD splat-0.08.ebuild 703 RMD160 e3fb470364fe1c542846d9e1c8733974388e36a2 SHA1 4c442399cca84da84572b4ea03a320b51fd8bc9c SHA256 42bff735d549d11638bf9a6a8e550c7764b80780697554553f263f34a1e53435
-MISC ChangeLog 2779 RMD160 f577b092f84110cf1da3ddfe93ea3b882c7876ff SHA1 932c34fc158f190bf6fe5fca8d79a203f8753db9 SHA256 576c872a645e50901aebfe107e64c1128741719c169b726d7cb98318bb1c1308
+EBUILD splat-0.08.ebuild 693 RMD160 a265521baefe795b6a7c3f2df19a806b12218273 SHA1 35a69444a646edbe5b1419b9e61816f556e3d064 SHA256 6eb4a42be42e9b14738a5248284478b809fd22a26b47b5419dd5c7c095491f53
+MISC ChangeLog 2925 RMD160 cef1a88b9bab9e9c74f0a4590bde78d8d3a730d7 SHA1 3ab2c12cdb91c2c1892194ce21041e844f9a37c6 SHA256 b73d419840451bb7f046e08593d53dc2bf8c8d49f1155ec3c8a305cf17a328dd
 MISC metadata.xml 166 RMD160 ca32b35979234f4c3cb4b824fb3c4b5c41bbb1b5 SHA1 ad2b30d8643bb8c9dc8042a399b172878b7021d7 SHA256 3837555db151fa9c3afbe9eb1edff296df030efb574605d6d2b5b37228c2a021
