@@ -1,6 +1,6 @@
-# Copyright 1999-2008 Gentoo Foundation
+# Copyright 1999-2010 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-portage/splat/splat-0.08.ebuild,v 1.20 2008/01/26 16:13:33 grobian Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-portage/splat/splat-0.08.ebuild,v 1.21 2010/03/31 13:03:55 idl0r Exp $
 
 inherit eutils prefix
 
@@ -24,5 +24,5 @@ src_unpack() {
 
 src_install() {
 	newbin splat.pl splat || die
-	dodoc COPYING ChangeLog
+	dodoc ChangeLog
 }
